--- a/fråga1.html
+++ b/fråga1.html
@@ -6,16 +6,15 @@
 </head>
 
 <body>
-    <!-- Här ska din HTML kod vara -->
-
-
-
 
     <script>
-        // Här ska din JavaScript kod vara
+        let height = 5;
+        let width = 3;
+        let omkrets = height * 2 + width * 2;
 
-
+        alert(omkrets);
     </script>
+
 </body>
 
 </html>
