--- a/fråga3.html
+++ b/fråga3.html
@@ -11,8 +11,9 @@
 
 
     <script>
-        // Här ska din JavaScript kod vara
-
+        const names = ["kalle", "pelle", "nalle"];
+        
+        alert(names[1]);
 
     </script>
 </body>
