--- a/fråga4.html
+++ b/fråga4.html
@@ -6,12 +6,16 @@
 </head>
 
 <body>
-    <!-- Här ska din HTML kod vara -->
 
 
     <script>
-        // Här ska din JavaScript kod vara
+        let myNumber = parseFloat(prompt("Ange ett tal:"));
 
+        if (myNumber >= 5 && myNumber <= 10) {
+            alert("Talet är mellan 5 och 10");
+        } else {
+            alert("Talet är inte mellan 5 och 10");
+        }
 
     </script>
 </body>
