--- a/fråga5.html
+++ b/fråga5.html
@@ -11,10 +11,13 @@
 
 
     <script>
-        // Här ska din JavaScript kod vara
+        let i = 0
 
-
+        for (; i <= 20; i++) {
+            alert(i);
+        }
     </script>
+    
 </body>
 
 </html>
