--- a/fråga6.html
+++ b/fråga6.html
@@ -11,8 +11,18 @@
 
 
     <script>
-        // Här ska din JavaScript kod vara
+        const politiker = [{id: 1, firstName: 'Stefan', lastName: 'Löven'},
+        {id: 2, firstName: 'Annie', lastName: 'Lööv'},
+        {id: 3, firstName: 'Nyamko', lastName: 'Sabuni'},
+        {id: 4, firstName: 'Jimmie', lastName: 'Åkesson'},
+        {id: 5, firstName: 'Per', lastName: 'Bolund'},];
 
+        let i = 0
+
+        for (; i < politiker.length; i++) {
+            alert(politiker[i].firstName + "-" + politiker[i].lastName)
+
+        }
 
     </script>
 </body>
