--- a/fråga7.html
+++ b/fråga7.html
@@ -8,9 +8,21 @@
 <body>
     <!-- Här ska din HTML kod vara -->
 
+    
     <script>
-        // Här ska din JavaScript kod vara
+        let x = 2;
+        let y = 3;
+        let z = 4;
 
+        function calculateArea(x, y){
+            let result = x * y;
+            alert(result);
+        }
+
+        function calculateVolume(x, y, z){
+            let result = x * y * z;
+            alert(result);
+        }
 
     </script>
 </body>
